Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <label for="first name"> Name :</label><br>
         <input type="text" name="name">
         <br><br>
+       <label for="first name"> Email :</label><br>
+        <input type="text" name="name">
+        <br><br> 
         <label for="Subject"> Subject :</label><br>
         <input type="text" name="subject">
         <br><br>
